tests/errors/lifetime/unborrow/unborrow_after_move.err.expected
error: at 8:13: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'r' is used after move
   |
 8 |             unborrow r;
   |             ^^^^^^^^^^
